[PRMT-1147] Updated registration-requests endpoint to follow JSON:API specification structure in sending the data
