# src/api/registration-request/registration-request.js
@@ -1,12 +1,13 @@
 import { body } from 'express-validator';
 
 export const registrationRequestValidationRules = [
-  body('nhsNumber').isNumeric().withMessage("'nhsNumber' provided is not numeric"),
-  body('nhsNumber')
+  body('data.type').equals('registration-requests'),
+  body('data.id').isUUID('4').withMessage("'conversationId' provided is not of type UUIDv4"),
+  body('data.attributes.nhsNumber').isNumeric().withMessage("'nhsNumber' provided is not numeric"),
+  body('data.attributes.nhsNumber')
     .isLength({ min: 10, max: 10 })
     .withMessage("'nhsNumber' provided is not 10 characters"),
-  body('odsCode').notEmpty(),
-  body('conversationId').isUUID('4').withMessage("'conversationId' provided is not of type UUIDv4")
+  body('data.attributes.odsCode').notEmpty()
 ];
 
 export const registrationRequest = async (req, res) => {
